--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ email_validator==2.2.0
 exceptiongroup==1.3.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+greenlet==3.2.2
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -17,8 +18,10 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
+PyMySQL==1.1.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
@@ -26,6 +29,7 @@ rich==14.0.0
 rich-toolkit==0.14.6
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 starlette==0.46.2
 typer==0.15.4
 typing-inspection==0.4.1
@@ -34,3 +38,5 @@ uvicorn==0.34.2
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+passlib[bcrypt]==1.7.4
+bcrypt==4.3.0
