--- a/requirements.txt
+++ b/requirements.txt
@@ -39,5 +39,6 @@ uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
 passlib[bcrypt]==1.7.4
-bcrypt==4.3.0
+bcrypt==3.2.2
 fastapi-mail==1.4.1
+python-jose[cryptography]==3.3.0
