--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,7 @@ passlib[bcrypt]==1.7.4
 bcrypt==3.2.2
 fastapi-mail==1.4.1
 python-jose[cryptography]==3.3.0
+pytest==8.0.0
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
+faker==22.6.0
