--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,63 @@
+aiosmtplib==2.0.2
+alembic==1.16.1
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==3.2.2
+blinker==1.9.0
 certifi==2025.4.26
+cffi==1.17.1
 click==8.1.8
+coverage==7.8.2
+cryptography==45.0.3
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 exceptiongroup==1.3.0
+Faker==22.6.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+fastapi-mail==1.4.1
 greenlet==3.2.2
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+-e git+https://github.com/OluwadaraDaily/my-finance-api.git@6215391cf42d4d69347960aa32cf223e18be3b32#egg=my_finance_api
+packaging==25.0
+passlib==1.7.4
+pluggy==1.6.0
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
 PyMySQL==1.1.1
+pytest==8.0.0
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
+pytest-mock==3.14.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-jose==3.3.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.6
+rsa==4.9.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
+tomli==2.2.1
 typer==0.15.4
 typing-inspection==0.4.1
 typing_extensions==4.13.2
@@ -38,11 +65,3 @@ uvicorn==0.34.2
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
-passlib[bcrypt]==1.7.4
-bcrypt==3.2.2
-fastapi-mail==1.4.1
-python-jose[cryptography]==3.3.0
-pytest==8.0.0
-pytest-asyncio==0.23.5
-pytest-cov==4.1.0
-faker==22.6.0
